# test-ds-credit

./: .env.example  README.md  RESULTS.md  pyproject.toml
src/: classification.py  evaluation.py  extraction.py  llm_client.py  subject_check.py
tests/: test_classification.py  test_evaluation.py  test_extraction.py  test_llm_client.py  test_subject_check.py
