[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-credit"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.28",
    "python-dotenv>=1.0",
    "pytest>=8",
    "tabulate>=0.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "classification",
    "evaluation",
    "extraction",
    "llm_client",
    "subject_check",
]
